feat(aep/217): add support for unreachable resources
aep-217 support for unreachable resources.
